# sample-code

./: CQassign.bat  README.md  generateSDR.bat  genflashimg.py  mkt.txt  stagecabs.bat  updateProd1551.bat
autotools-helloworld/: .sconsign.dblite  Makefile.am  README  configure.ac
autotools-helloworld/.deps/: hello.Po  main.Po
autotools-helloworld/src/foofiles/: .sconsign.dblite  Makefile.am  foo.h
autotools-helloworld/src/main/: Makefile.am  hello.h
batch-scripts/: buildstart.bat
cmake-helloworld/: CMakeLists.txt
cmake-helloworld/src/: CMakeLists.txt
gradle-sample/.svn/: wc.db
gradle-sample/registration-oobe/: build.gradle
hp/: gitfs_sync  updateVersion.sh
perl-scripts/: CQassign.bat  ReleaseOutput.pl  ci.pl  co.pl  cond.pl  deldil.pl  deldlvr.pl  listdir.pl  maklabel.pl  moabuild.bat  setDGoodBld.pl  uncolbl.pl  vrsnupdate.pl
python-scripts/: gerritTableWikiText.py
qc/: Gerrit.py  addNewPL.py  cherryPick.py  cron-checkCR-qcacld.sh  dependencyOrder.py  gEmptyFileCheck.py  gerrit-test.py  gerritFromCommit.py  gerritValidation.py  getAllApprovedGerrits.py  getDependencies.py  getVerifiedGerrits.py  updateVersion.py
scons-helloworld/: SConstruct
scons-helloworld/src/: SConscript
sie/: Build_Process.doc
sie/batch_scripts/: ReleaseOutput.bat  addSerMachineCfg.bat  attr.bat  backupDOs.bat  buildInstallLang_xpr.bat  buildInstall_xpr.bat  buildToolbar.bat  buildcfg.bat  buildlang_xpr.bat  buildstart.bat  (+21 more)
sny/: CQassign.bat  generateSDR.bat  genflashimg.py  moabuild.bat  stagecabs.bat  updateProd1551.bat
vagrant-ansible-example/: Vagrantfile
(+37 files in other folders)
