AC_PREREQ([2.68])
AC_INIT([hello], [1.0], [kietlam@xyz.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_SRCDIR([src/foofiles/foo.cc])
AC_CONFIG_HEADERS([config.h])

AC_CONFIG_MACRO_DIR([m4])
LT_INIT

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/foofiles/Makefile
                 src/main/Makefile])
AC_OUTPUT
